2014-08-??  Release 1.12.0

  * Jenkins job names can be regular expressions. The regular expressions 
    should resolve to exactly one job.
  * Coverage report metric sources (JaCoCo and Emma) now take a Jenkins instance
    as first argument. This allows for using job names with regular expressions.


2014-08-21  Release 1.11.1

  * Allow for specifying branch ids per metric source. Useful if the branch is
    named differently in e.g. Sonar than in Subversion.


2014-08-21  Release 1.11.0

  * Allow for adding branches of products to the project.


2014-08-14  Release 1.10.2

  * Bugfix: don't crash when history charts can't be downloaded when creating
    the report.


2014-08-14  Release 1.10.1

  * Recent history charts for metrics are now downloaded when creating the
    report instead of when the user loads the report.
  * Bug fix: don't use memory address of objects when generating a stable
    id of metrics for use in the history.


2014-08-08  Release 1.10.0

  * The dashboard now uses column charts when displaying all versions of
    products and pie charts when displaying only the trunk versions of products.


2014-08-07  Release 1.9.1

  * Bug fix: strip revision numbers before passing them to Subversion.


2014-08-07  Release 1.9.0

  * The dashboard now uses column charts instead of pie chart so that it can
    give an overview of all product versions that are included in the quality
    report.
  * Introduce new quality attribute - dependency quality - and specify that the
    related metrics measure that quality attribute.
  * Bug fix: ignore revisions created by Maven on tags when checking for 
    unmerged revisions of branches.
  * Bug fix: don't invoke the Sonar runner on products without Sonar id.
  * Remove ART performance metric. Not used anymore.


2014-07-31  Release 1.8.1

  * Bug fix: don't report the number of dependencies on snapshot versions for
    the snapshot version of products.


2014-07-31  Release 1.8.0
